Hide categories on mobile home page and some corrections

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -6,6 +6,12 @@ $esaip-color: #009bc2;
     }
 }
 
+@media (max-width: 990px) {
+    .home-categ-list {
+        display: none;
+    }
+}
+
 body {
     background-color: #e9ecef;
 }
